[workspace]
members = ["listings/ch02-guessing-game-tutorial/listing-02-03", "listings/ch02-guessing-game-tutorial/listing-02-04", "listings/ch02-guessing-game-tutorial/listing-02-05", "listings/ch02-guessing-game-tutorial/listing-02-06","packages/tools"]
default-members = ["packages/tools"]
resolver = "2"
exclude = [
    "linkchecker", # linkchecker is part of the CI workflow
    "listings",    # these are intentionally distinct from the workspace
    "tmp",         # listings are built here when updating output via tools/update-rustc.sh
]

[workspace.dependencies]
walkdir = "2.3.1"
docopt = "1.1.0"
serde = "1.0"
regex = "1.3.3"
lazy_static = "1.4.0"
flate2 = "1.0.13"
tar = "0.4.26"
